Started styling About Us page

--- a/assignment1_project_name/about.html
+++ b/assignment1_project_name/about.html
@@ -16,12 +16,38 @@
                 <a href="contact.html">Contact Us</a>
             </nav>
         </div>
-        <div class="item2">2</div>
-        <div class="item3">3</div>
-        <div class="item4">4</div>
-        <div class="item5">5</div>
-        <div class="item6">6</div>
-        <div class="item7">7</div>
+        <div class="missionStatement">
+            <h1>Our Mission</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero perspiciatis inventore reiciendis commodi, incidunt quam eaque praesentium perferendis, quidem odio odit quod accusamus voluptatum ullam dolorem obcaecati autem minus expedita!</p>
+        </div>
+        <div class="aboutPerson">
+            <img src="images/img_avatar.png">
+            <h2>person1</h2>
+            <h3>Role: Project Manager</h3>
+            <p>blah blah blah Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur ipsam optio perferendis libero fuga quos, voluptates odit id omnis animi ad veniam exercitationem illum? Odit debitis hic veritatis nulla?</p>
+
+        </div>
+        <div class="aboutPerson">
+            <img src="images/img_avatar.png">
+            <h2>person2</h2>
+            <h3>Role: Emotional Support</h3>
+            <p>blah blah blah Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, ipsa aliquam. Recusandae optio, qui voluptatem quas iusto repudiandae illum cum eius perspiciatis. A laboriosam beatae impedit laborum dolore quaerat ipsam?</p>
+
+        </div>
+        <div class="aboutPerson">
+            <img src="images/img_avatar.png">
+            <h2>person3</h2>
+            <h3>Role: Tech Lead</h3>
+            <p>blah blah blah Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum recusandae voluptatibus illum labore rerum amet consequuntur commodi! Dolorum ullam doloribus deserunt voluptatum omnis asperiores minus debitis, minima, aliquam commodi ipsa. </p>
+        </div>
+        <div class="companyTimeline">
+            <h2>Our History</h2>
+            <ul>
+                <li>2024: big bucks</li>
+                <li>2019: epic</li>
+                <li>2015: asdf</li>
+            </ul>
+        </div>
         <div class="footer">footer</div>
     </div>
 </body>
