--- a/assignment1_project_name/about.html
+++ b/assignment1_project_name/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="grid-container">
@@ -18,37 +17,35 @@
         </div>
         <div class="missionStatement">
             <h1>Our Mission</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero perspiciatis inventore reiciendis commodi, incidunt quam eaque praesentium perferendis, quidem odio odit quod accusamus voluptatum ullam dolorem obcaecati autem minus expedita!</p>
+            <p>Providing expert PC and laptop repairs, custom builds, and performance upgrades with outstanding customer service.</p>
         </div>
         <div class="aboutPerson">
             <img src="images/img_avatar.png">
-            <h2>person1</h2>
-            <h3>Role: Project Manager</h3>
-            <p>blah blah blah Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae consequatur ipsam optio perferendis libero fuga quos, voluptates odit id omnis animi ad veniam exercitationem illum? Odit debitis hic veritatis nulla?</p>
-
+            <h2>Arturs Silins</h2>
+            <h3>Role: Founder & Lead Technician</h3>
+            <p>Over 10 years of experience in computer repair and custom PC building.</p>
         </div>
         <div class="aboutPerson">
             <img src="images/img_avatar.png">
-            <h2>person2</h2>
-            <h3>Role: Emotional Support</h3>
-            <p>blah blah blah Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, ipsa aliquam. Recusandae optio, qui voluptatem quas iusto repudiandae illum cum eius perspiciatis. A laboriosam beatae impedit laborum dolore quaerat ipsam?</p>
-
+            <h2>Eriks Ralfs Matulis</h2>
+            <h3>Role: Customer Support</h3>
+            <p>Ensuring a smooth customer experience and assisting with inquiries.</p>
         </div>
         <div class="aboutPerson">
             <img src="images/img_avatar.png">
-            <h2>person3</h2>
-            <h3>Role: Tech Lead</h3>
-            <p>blah blah blah Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum recusandae voluptatibus illum labore rerum amet consequuntur commodi! Dolorum ullam doloribus deserunt voluptatum omnis asperiores minus debitis, minima, aliquam commodi ipsa. </p>
+            <h2>Alberts Plucis</h2>
+            <h3>Role: Hardware Specialist</h3>
+            <p>Expert in diagnosing and repairing complex hardware issues.</p>
         </div>
         <div class="companyTimeline">
             <h2>Our History</h2>
             <ul>
-                <li>2024: big bucks</li>
-                <li>2019: epic</li>
-                <li>2015: asdf</li>
+                <li>2024: Expanded to a full-service PC repair and build company.</li>
+                <li>2019: Launched custom PC build services.</li>
+                <li>2015: Founded as a local repair shop.</li>
             </ul>
         </div>
-        <div class="footer">footer</div>
+        <div class="footer">© 2025 PC Fix & Build</div>
     </div>
 </body>
 </html>
