--- a/assignment1_project_name/contact.html
+++ b/assignment1_project_name/contact.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Contact Us</title>
 </head>
 <body>
     <div class="grid-container">
@@ -16,13 +15,25 @@
                 <a href="contact.html">Contact Us</a>
             </nav>
         </div>
-        <div class="item2">2</div>
-        <div class="item3">3</div>
-        <div class="item4">4</div>
-        <div class="item5">5</div>
-        <div class="item6">6</div>
-        <div class="item7">7</div>
-        <div class="footer">footer</div>
+        <div class="contactForm">
+            <h2>Contact Us</h2>
+            <form>
+                <label for="name">Full Name</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">E-mail</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        <div class="contactDetails">
+            <h3>Our Contact Details</h3>
+            <p>Email: support@pcfixbuild.com</p>
+            <p>Phone: (123) 456-7890</p>
+            <p>Address: 123 Tech Street, City, Country</p>
+        </div>
+        <div class="footer">© 2025 PC Fix & Build</div>
     </div>
 </body>
 </html>
