--- a/assignment1_project_name/services.html
+++ b/assignment1_project_name/services.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="grid-container">
@@ -16,13 +15,22 @@
                 <a href="contact.html">Contact Us</a>
             </nav>
         </div>
-        <div class="item2">2</div>
-        <div class="item3">3</div>
-        <div class="item4">4</div>
-        <div class="item5">5</div>
-        <div class="item6">6</div>
-        <div class="item7">7</div>
-        <div class="footer">footer</div>
+        <div class="servicesSection">
+            <h2>Our Services</h2>
+            <section>
+                <h3>PC & Laptop Repairs</h3>
+                <p>From broken screens to overheating issues, we fix all major brands.</p>
+            </section>
+            <section>
+                <h3>Custom PC Builds</h3>
+                <p>Gaming, workstation, and budget-friendly custom builds tailored to your needs.</p>
+            </section>
+            <section>
+                <h3>Hardware & Software Upgrades</h3>
+                <p>Boost performance with RAM, SSD, GPU, and software optimizations.</p>
+            </section>
+        </div>
+        <div class="footer">© 2025 PC Fix & Build</div>
     </div>
 </body>
 </html>
