Added js/ folder and updated visual style

--- a/assignment1_project_name/about.html
+++ b/assignment1_project_name/about.html
@@ -9,11 +9,14 @@
 <body>
     <div class="grid-container">
         <div class="navbar">
-            <nav>
+            <nav class="navleft">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact Us</a>
+            </nav>
+            <nav class="navright">
+                <a href="#"><img id="loginIcon" src="images/login_icon.png"> Log In</a>
             </nav>
         </div>
         <div class="missionStatement">
@@ -48,5 +51,6 @@
         </div>
         <div class="footer">© 2025 PC Fix & Build</div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
