--- a/assignment1_project_name/index.html
+++ b/assignment1_project_name/index.html
@@ -9,17 +9,23 @@
 <body>
     <div class="grid-container">
         <div class="navbar">
-            <nav>
+            <nav class="navleft">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact Us</a>
             </nav>
+            <nav class="navright">
+                <a href="#"><img id="loginIcon" src="images/login_icon.png"> Log In</a>
+            </nav>
         </div>
         <div class="heroSection">
             <h1>Welcome to PC Fix & Build</h1>
             <p>Your trusted partner in PC and laptop repair and custom builds.</p>
+            <br>
             <a href="services.html" class="cta-button">Discover Our Services</a>
+            <br><br>
+            <img src="images/repair.jpg" id="heroImage">
         </div>
         <div class="featuredSection">
             <h2>Why Choose Us?</h2>
@@ -46,5 +52,6 @@
             </nav>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
