--- a/assignment1_project_name/services.html
+++ b/assignment1_project_name/services.html
@@ -9,23 +9,29 @@
 <body>
     <div class="grid-container">
         <div class="navbar">
-            <nav>
+            <nav class="navleft">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact Us</a>
             </nav>
+            <nav class="navright">
+                <a href="#"><img id="loginIcon" src="images/login_icon.png"> Log In</a>
+            </nav>
         </div>
         <div class="servicesSection">
             <h2>Our Services</h2>
+            <hr>
             <section>
                 <h3>PC & Laptop Repairs</h3>
                 <p>From broken screens to overheating issues, we fix all major brands.</p>
             </section>
+            <hr>
             <section>
                 <h3>Custom PC Builds</h3>
                 <p>Gaming, workstation, and budget-friendly custom builds tailored to your needs.</p>
             </section>
+            <hr>
             <section>
                 <h3>Hardware & Software Upgrades</h3>
                 <p>Boost performance with RAM, SSD, GPU, and software optimizations.</p>
@@ -33,5 +39,6 @@
         </div>
         <div class="footer">© 2025 PC Fix & Build</div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
