--- a/assignment1_project_name/contact.html
+++ b/assignment1_project_name/contact.html
@@ -9,11 +9,14 @@
 <body>
     <div class="grid-container">
         <div class="navbar">
-            <nav>
+            <nav class="navleft">
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact Us</a>
+            </nav>
+            <nav class="navright">
+                <a href="#"><img id="loginIcon" src="images/login_icon.png"> Log In</a>
             </nav>
         </div>
         <div class="contactForm">
@@ -21,8 +24,10 @@
             <form>
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" required>
+                <br><br>
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" required>
+                <br><br>
                 <label for="message">Message</label>
                 <textarea id="message" name="message" required></textarea>
                 <button type="submit">Submit</button>
@@ -36,5 +41,6 @@
         </div>
         <div class="footer">© 2025 PC Fix & Build</div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
