--- a/assignment1_project_name/contact.html
+++ b/assignment1_project_name/contact.html
@@ -3,21 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Latest compiled and minified Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Project's custom CSS file overriding Bootstrap -->
     <link rel="stylesheet" href="css/styles.css">
+    
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Contact Us</title>
 </head>
 <body>
     <div class="grid-container">
-        <div class="navbar">
-            <nav class="navleft">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html">Contact Us</a>
-            </nav>
-            <nav class="navright">
-                <a href="#"><img id="loginIcon" src="images/login_icon.png"> Log In</a>
-            </nav>
+        <div class="navbar navbar-expand-md">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseNav" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            <div id="collapseNav" class="collapse navbar-collapse">
+                <nav id="navbarCollapsible" class="navbar navbar-expand-lg navbar-light">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="services.html">Services</a>
+                    <a href="contact.html">Contact Us</a>
+                    <a href="#"><img id="loginIcon" src="images/login_icon.png"> Log In</a>
+                    <button id="darkmodebutton" onclick="toggleDarkMode()"><img id="darkmodeicon" src="images/dark-mode.png"></button>
+                </nav>
+            </div>
         </div>
         <div class="contactForm">
             <h2>Contact Us</h2>
@@ -39,7 +50,8 @@
             <p>Phone: (123) 456-7890</p>
             <p>Address: 123 Tech Street, City, Country</p>
         </div>
-        <div class="footer">© 2025 PC Fix & Build</div>
+        <div class="footer" onmouseover="footerMouseover(this)" onmouseleave="footerMouseleave(this)">
+            © <span id="footerYear"></span> PC Fix & Build</div>
     </div>
     <script src="js/script.js"></script>
 </body>
