--- a/assignment1_project_name/contact.html
+++ b/assignment1_project_name/contact.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Latest compiled and minified Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Project's custom CSS file overriding Bootstrap -->
     <link rel="stylesheet" href="css/styles.css">
-    
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,7 +16,7 @@
         <div class="navbar navbar-expand-md">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapseNav" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
+            </button>
             <div id="collapseNav" class="collapse navbar-collapse">
                 <nav id="navbarCollapsible" class="navbar navbar-expand-lg navbar-light">
                     <a href="index.html">Home</a>
@@ -32,16 +30,15 @@
         </div>
         <div class="contactForm">
             <h2>Contact Us</h2>
-            <form>
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" required>
+            <form id="contactForm"> <div id="errorContainer"></div> <label for="name">Full Name</label>
+                <input class="form-control" type="text" id="name" name="name" required>
                 <br><br>
                 <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" required>
+                <input class="form-control" type="email" id="email" name="email" required>
                 <br><br>
                 <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-                <button type="submit">Submit</button>
+                <textarea class="form-control" id="message" name="message" required></textarea><br>
+                <button class="btn btn-primary" type="submit">Submit</button>
             </form>
         </div>
         <div class="contactDetails">
@@ -51,7 +48,8 @@
             <p>Address: 123 Tech Street, City, Country</p>
         </div>
         <div class="footer" onmouseover="footerMouseover(this)" onmouseleave="footerMouseleave(this)">
-            © <span id="footerYear"></span> PC Fix & Build</div>
+            © <span id="footerYear"></span> PC Fix & Build
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
